# no_std_tetris

./: Cargo.toml  README.MD
.github/workflows/: ci.yml
crate_project/: Cargo.toml  LICENSE
crate_project/src/: lib.rs  main.rs
esp32_c3_example/: Cargo.toml  README.md
esp32_c3_example/.cargo/: config.toml
esp32_c3_example/src/: main.rs
no_std_tetris/: Cargo.toml  README.MD
no_std_tetris/src/: lib.rs
src/: lib.rs  main.rs
terminal_example/: Cargo.toml
terminal_example/src/: main.rs
