[package]
name = "esp32-c3-super-mini-rust"
authors = ["Petr Gadorek <hahihula@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.19.0", features = ["esp32c3", "panic-handler", "exception-handler","println"] }
esp-hal = { version = "~1.1.0", features = [
   "esp32c3",
   "unstable"
]}
esp-println = { version = "0.17.0", features = ["esp32c3", "log"] }
esp-alloc = "0.10.0"
esp-hal-embassy = { version = "0.9", features=["esp32c3"] }
embassy-executor    = { version = "0.10", features = ["task-arena-size-20480"] }
embassy-sync              = { version = "0.7" }
embassy-time              = { version = "0.5" }
critical-section = "1.2.0"
no_std_tetris = "0.2"

