[package]
name = "esp32-c3-super-mini-rust"
authors = ["Petr Gadorek <hahihula@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.19.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-hal = { version = "~1.1.0", features = ["esp32c3", "log-04", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp-alloc", "esp32c3", "log-04"] }
esp-println = { version = "0.17.0", features = ["esp32c3"] }
esp-alloc = "0.10.0"
embassy-executor    = { version = "0.10", features = ["log"] }
embassy-sync              = { version = "0.7" }
embassy-time              = { version = "0.5" }
critical-section = "1.2.0"
no_std_tetris = { package = "no_std_tetris", path = "../no_std_tetris" }

